# FleXR

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  flexr  flexr.pc.in  mxre  mxre.pc.in
examples/: CMakeLists.txt  basic_example.cc  basic_example_with_cuda.cc  complex_yolo.cc  fulloff_client.cc  fulloff_server.cc  fulloff_server_with_cuda.cc  illixr_local_server.cc  imgloader_example.cc  imgloader_example_with_cuda.cc  runner.cc  serialized_example.cc  serialized_example_with_cuda.cc
examples/experiments/: local_run.sh  mock_cam_adq.cc  mock_cam_cuda_adq.cc  mock_cam_cuda_q.cc  mock_cam_q.cc  serialized_mock_cam.cc  serialized_mock_cam_cuda.cc
examples/external_usage/: adding_your_kernel.cc  adding_your_kernel.yaml  aux2.yaml  aux4.yaml  aux8.yaml  aux_test.yaml  aux_text.cc  f1.yaml  f2.yaml  f4.yaml  f8.yaml
examples/full_offloading/: cam_fulloff_client.cc  cam_fulloff_server.cc  img_fulloff_client.cc  img_fulloff_server_with_cuda.cc
examples/game_engine/: orb_remote.yaml  ue_ar.yaml  unity_ar_example.yaml  vr_example.yaml
examples/incubator/: illixr_local_server.cc  unity_test.cc  unity_writer.cc
examples/marker_ar/: config.yaml  orb_det_client.yaml  orb_det_server.yaml  orb_full_client.yaml  orb_full_server.yaml  orb_local.yaml  orb_local_cuda.yaml  orb_per_client.yaml  orb_per_server.yaml  orb_ren_client.yaml  orb_ren_server.yaml  orb_serialized.cc  orb_serialized_cuda.cc
examples/marker_ar_with_cam/: basic_example.cc  basic_example_with_cuda.cc
examples/marker_ar_with_img/: imgloader_example_adq.cc  imgloader_example_q.cc  imgloader_example_with_cuda_q.cc  serialized_img_loader.cc  serialized_img_loader_with_cuda.cc
examples/marker_ar_with_mock/: config.yaml  mock_cam_adq.cc  mock_cam_cuda_adq.cc  mock_cam_cuda_q.cc  mock_cam_q.cc  run.sh  serialized_mock_cam.cc  serialized_mock_cam_cuda.cc
examples/modules/: cam_split.cc  complex_yolo.cc  ffmpeg_consumer.cc  ffmpeg_stream.cc  illixr_cvmat_mock.cc  illixr_cvmat_pipeline.cc  illixr_frame_mock.cc  illixr_frame_pipeline.cc  illixr_mock.cc  illixr_pipeline.cc  message_receiver.cc  message_sender.cc  network_cvmat_client.cc  network_cvmat_server.cc  network_static_client.cc  network_static_server.cc  ocv_raft_zerocpy.cc  roundtrip_client.cc  roundtrip_server.cc
examples/partial_offloading/: detector_only_client.cc  detector_only_server.cc  detector_only_server_with_cuda.cc  perception_only_client.cc  perception_only_server.cc  perception_only_server_with_cuda.cc
examples/poc/: simple_full.yaml  simple_local.yaml  simple_perception.yaml  simple_renderer.yaml
examples/tutorials/: appsink.yaml  appsrc.yaml  bag_example.cc  bag_example.yaml  bag_example2.yaml  config.yaml  cv_cam_example.cc  cv_cam_example.yaml  img_loader_example.cc  img_player_example.yaml  img_player_sender.yaml  marker_tutorial.yaml  marker_tutorial2.yaml  roundtrip_client.cc  roundtrip_client.yaml  roundtrip_server.cc  roundtrip_server.yaml  run_tutorial.cc  shm_test.yaml  streaming_client.cc  streaming_receiver.cc  streaming_receiver.yaml  streaming_sender.cc  streaming_sender.yaml  streaming_server.cc
examples/workload_ratio/: ar_aruco.yaml
flexr_kernels/source/: CMakeLists.txt
flexr_third_party/unity_plugins/: CMakeLists.txt  FaceDetection.cc  flexr_rtp_plugin.cc  generate_dlls.sh
flexrinc/: CMakeLists.txt  defs.h
flexrinc/components/: cv_frame_reader.h  flexr_port.h  flexr_port_manager.h  frequency_manager.h  logger.h  orb_marker_tracker.h  rosbag_frame_reader.h  rosbag_reader.h  rtp_port.h  rtp_receiver.h  rtp_sender.h  zmq_port.h
flexrinc/kernels/: kernel.h
flexrinc/types/: clock_types.h  frame.h  types.h
flexrinc/utils/: cv_utils.h  deserialize_functions.h  egl_utils.h  getch.h  gl_utils.h  local_copy_functions.h  msg_receiving_functions.h  msg_sending_functions.h  path_finder.h  serialize_functions.h
flexrinc/yaml/: yaml_flexr_kernel.h  yaml_local_connection.h  yaml_parser.h  yaml_ports.h
mxreinc/: CMakeLists.txt  defs.h
mxreinc/components/: cv_camera.h  cv_frame_reader.h  frequency_manager.h  logger.h  mxre_port.h  mxre_port_manager.h  receiving_functions.h  rosbag_frame_reader.h  rosbag_reader.h  rtp_receiver.h  rtp_sender.h  sending_functions.h  zmq_port.h
mxreinc/kernels/: kernel.h
mxreinc/types/: clock_types.h  frame.h  types.h
mxreinc/utils/: cv_utils.h  egl_utils.h  gl_utils.h  msg_receiving_functions.h  msg_sending_functions.h  path_finder.h
source/components/: CMakeLists.txt  cv_camera.cc  cv_frame_reader.cc  frequency_manager.cc  logger.cc  orb_marker_tracker.cc  rosbag_frame_reader.cc  rosbag_reader.cc  rtp_port.cc  rtp_receiver.cc  rtp_sender.cc
source/kernels/: CMakeLists.txt
source/types/: CMakeLists.txt  virtual_world_manager.cc
source/yaml/: CMakeLists.txt
src/: CMakeLists.txt  camera.cc  complexyolo_renderer.cc  cuda_orb_detector.cc  cv_display.cc  gl_types.cc  image_loader.cc  object_ctx_extractor.cc  object_detector.cc  object_renderer.cc  object_tracker.cc
src/ar/: world_manager.cc
src/components/: rosbag_frame_reader.cc  rosbag_reader.cc  rtp_receiver.cc  rtp_sender.cc
src/device/: cv_camera.cc  cv_display.cc  keyboard.cc
src/gl/: gl_types.cc  model_loading.vs
src/network/: rtp_frame_receiver.cc  rtp_frame_sender.cc
src/types/: virtual_world_manager.cc
tests/: CMakeLists.txt  basic_example.cc  basic_example_with_cuda.cc  egl0.cc  egl_fbo.cc  egl_ogl_basic.cc  egl_ogl_box.cc  ffmpeg_consumer.cc  ffmpeg_stream.cc  fulloff_client.cc  fulloff_server.cc  ocv_cam.cc  ocv_cuda_orb.cc  ocv_raft_basic.cc  ocv_raft_zerocpy.cc  ogl_board.cc  ogl_box.cc  ogl_fbo_ocv_texture.cc  raft0.cc  raft1.cc  raft2.cc  raft3_template.cc  raft4_template_receiver.cc  raft4_template_sender.cc  raft5_zerocpy.cc  raft_gst.cc  remote_port_ser_dser.cc  stream_receiver.cc  stream_sender.cc  test_pipeline.cc  test_pipeline_box.cc  zmq0_receiver.cc  zmq0_sender.cc  zmq1_receiver.cc  zmq1_sender.cc  zmq2_receiver.cc  zmq2_sender.cc
tests/modules/: ffmpeg_consumer.cc  network_cvmat_client.cc  network_cvmat_server.cc  (+2 more)
vulkan_debug/: CMakeLists.txt  vulkan_debug.cc
(+412 files in other folders)
