list( APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake )


set( FLEXR_DIR_NAME "flexrinc" )
set( FLEXR_INC_TARGET ${CMAKE_INSTALL_PREFIX}/include )

install( DIRECTORY ${CMAKE_SOURCE_DIR}/${FLEXR_DIR_NAME} DESTINATION ${FLEXR_INC_TARGET} )

file( GLOB_RECURSE CONFIG_HEADER ${CMAKE_SOURCE_DIR}/build/config/*.h )

install( FILES ${CONFIG_HEADER} DESTINATION ${FLEXR_INC_TARGET}/${FLEXR_DIR_NAME} )

