list( APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake )


set( MXRE_DIR_NAME "mxreinc" )
set( MXRE_INC_TARGET ${CMAKE_INSTALL_PREFIX}/include )

install( DIRECTORY ${CMAKE_SOURCE_DIR}/${MXRE_DIR_NAME} DESTINATION ${MXRE_INC_TARGET} )

file( GLOB_RECURSE CONFIG_HEADER ${CMAKE_SOURCE_DIR}/build/config/*.h )

install( FILES ${CONFIG_HEADER} DESTINATION ${MXRE_INC_TARGET}/${MXRE_DIR_NAME} )

