add_library(mxre_kernel INTERFACE)

add_subdirectory(source)
add_subdirectory(intermediate)
add_subdirectory(sink)

target_link_libraries(mxre_kernel INTERFACE mxre_source_kernel)
target_link_libraries(mxre_kernel INTERFACE mxre_sink_kernel)
target_link_libraries(mxre_kernel INTERFACE mxre_intermediate_kernel)

