add_library(flexr_yaml_kernel INTERFACE)

add_subdirectory(kernels)

target_link_libraries(flexr_yaml_kernel INTERFACE flexr_yaml_source_kernel)
target_link_libraries(flexr_yaml_kernel INTERFACE flexr_yaml_sink_kernel)
target_link_libraries(flexr_yaml_kernel INTERFACE flexr_yaml_intermediate_kernel)

